--- a/Route.C41.G03.PL/Views/Department/Edit.cshtml
+++ b/Route.C41.G03.PL/Views/Department/Edit.cshtml
@@ -27,3 +27,8 @@
     <input type="submit" value="Save" class="btn btn-primary" />
     <a asp-action="Index" class="btn btn-light">Back To List</a>
 </form>
+
+@section ValidationScriptSection {
+    <script src="~/lib/jquery-validation/dist/additional-methods.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
