--- a/Route.C41.G03.PL/Views/Employee/Edit.cshtml
+++ b/Route.C41.G03.PL/Views/Employee/Edit.cshtml
@@ -54,3 +54,8 @@
     <a asp-action="Index" class="btn btn-light">Back To List</a>
 </form>
 
+
+@section ValidationScriptSection {
+    <script src="~/lib/jquery-validation/dist/additional-methods.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
