--- a/Route.C41.G03.PL/Views/Employee/Create.cshtml
+++ b/Route.C41.G03.PL/Views/Employee/Create.cshtml
@@ -56,6 +56,5 @@
 </form>
 
 @section ValidationScriptSection {
-    <script src="~/lib/jquery-validation/dist/additional-methods.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <partial name="_ValidationScriptsPartial" />
 }
