--- a/Route.C41.G03.PL/Views/Department/Delete.cshtml
+++ b/Route.C41.G03.PL/Views/Department/Delete.cshtml
@@ -8,19 +8,7 @@
 <div asp-validation-summary="All"></div>
 
 <form asp-action="Delete">
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Code"></label>
-        <input asp-for="Code" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="DateOfCreation"></label>
-        <input asp-for="DateOfCreation" class="form-control" readonly />
-    </div>
-
+    <partial name="PartialViews/DetailsDeletePV" />
     <input type="submit" value="Delete" asp-action="Delete" class="btn btn-danger" />
     <a asp-action="Index" class="btn btn-light">Back To List</a>
 
