--- a/Route.C41.G03.PL/Views/Department/Edit.cshtml
+++ b/Route.C41.G03.PL/Views/Department/Edit.cshtml
@@ -8,27 +8,11 @@
 
 <diV asp-validation-summary="All"></diV>
 <form asp-action="Edit">
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Code"></label>
-        <input asp-for="Code" class="form-control" />
-        <span asp-validation-for="Code" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" />
-        <span asp-validation-for="Name" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="DateOfCreation"></label>
-        <input asp-for="DateOfCreation" class="form-control" />
-        <span asp-validation-for="DateOfCreation" class="text-danger"></span>
-    </div>
-
+    <partial name="PartialViews/CreateEditPV" />
     <input type="submit" value="Save" class="btn btn-primary" />
     <a asp-action="Index" class="btn btn-light">Back To List</a>
 </form>
 
 @section ValidationScriptSection {
-    <script src="~/lib/jquery-validation/dist/additional-methods.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <partial name="_ValidationScriptsPartial" />
 }
