--- a/Route.C41.G03.PL/Views/Employee/Index.cshtml
+++ b/Route.C41.G03.PL/Views/Employee/Index.cshtml
@@ -46,21 +46,7 @@
                     <td>@employee.PhoneNumber</td>
                     <td>@employee.HireDate</td>
                     <td>@employee.CreateDate</td>
-                    <td>
-                        <a asp-controller="Employee" asp-action="Details" asp-route-id="@employee.Id" class="btn-warning">
-                            <i class="fas fa-eye"></i>Details
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-controller="Employee" asp-action="Edit" asp-route-id="@employee.Id" class="btn-success">
-                            <i class="fas fa-edit"></i>Update
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-controller="Employee" asp-action="Delete" asp-route-id="@employee.Id" class="btn-danger">
-                            <i class="fas fa-trash"></i>Delete
-                        </a>
-                    </td>
+                    <partial name="_ButtonsPartialView" model="employee.Id" />
                 </tr>
             }
         </tbody>
